[gd_scene load_steps=6 format=3 uid="uid://bak0bku7ej6bi"]

[ext_resource type="Texture2D" uid="uid://cshlmk0l0egby" path="res://assets/img/newBg.png" id="1_t7hm7"]
[ext_resource type="Script" uid="uid://ctltma5wk5dxx" path="res://Scripts/uiScript/pause_menu.gd" id="1_wnmk1"]
[ext_resource type="Texture2D" uid="uid://ce65y263ajct3" path="res://assets/img/Icon.png" id="3_wnmk1"]
[ext_resource type="FontFile" uid="uid://niw013swj2th" path="res://assets/Bauhaus 93 Regular.ttf" id="4_1dfcm"]
[ext_resource type="AudioStream" uid="uid://dfreqwop5oa4h" path="res://assets/aud/inter song.wav" id="5_uxcyg"]

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnmk1")

[node name="bg" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.364706)
position = Vector2(960, 540)
texture = ExtResource("1_t7hm7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(397, 374)
texture = ExtResource("3_wnmk1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 374.0
offset_right = 1222.0
offset_bottom = 475.0
scale = Vector2(2, 2)
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="PAUSD" type="Label" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 72.0
offset_right = 1426.0
offset_bottom = 209.0
theme_override_fonts/font = ExtResource("4_1dfcm")
theme_override_font_sizes/font_size = 100
text = "PAUSED"
uppercase = true

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uxcyg")

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
